# TropicalCycloneML

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  Resources  Worldsphere_Backbone120622.ipynb  birthday_brian.py  claude_usage_tracker.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  run_agent.py
.github/workflows/: deploy-cloudrun.yml  deploy-web.yml
ai_suitability_framework/: __init__.py  dimensions.py  examples.py  framework.py  heuristics.py  scoring.py
cancer_agent/: __init__.py  __main__.py  agent.py
cancer_agent/analysis/: __init__.py  explorer.py
cancer_agent/data/: __init__.py  loader.py  preprocessor.py
cancer_agent/evaluation/: __init__.py  evaluator.py  reporter.py
cancer_agent/models/: trainer.py
cancer_agent/service/: __main__.py  app.py
cancer_agent/utils/: logger.py
climate_agent/: __init__.py  __main__.py  agent.py  config.py
climate_agent/api/: app.py  middleware.py
climate_agent/auth/: auth.py
climate_agent/billing/: __init__.py  stripe_billing.py
climate_agent/db/: __init__.py  models.py
climate_agent/models/: __init__.py  cyclone_net.py
climate_agent/tools/: __init__.py  analysis.py  data_fetch.py  forecasting.py  registry.py  visualization.py
huggingface_live_tool/: __init__.py  __main__.py  cli.py  config.py  government_data.py  huggingface_client.py  pipeline.py
huggingface_live_tool/api/: __init__.py  app.py
scripts/: deploy-cloudrun.sh
service/: app.py  client.py
service/templates/: index.html  (+1 more)
web/: Dockerfile  app.js  index.html  nginx.conf  style.css
(+10 files in other folders)
